--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,51 +4,73 @@
 
 {% block body %}
 {{ parent() }}
+    <div class="cartTitle">
             <h1 style="padding-top:1em">Carrito de la compra</h1>
-     <div class="container">
+    </div>
+    <div class="container">
         <div class="row text-center login-page">
 	        <div class="col-md-12 login-form" style="padding:3em">
-        {% if items | length > 0 %}
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Articulo</th>
-                        <th>Imagen</th>
-                        <th>Precio</th>
-                        <th>Cantidad</th>
-                        <th>Total</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in items %}
-                        <tr>
-                            <td>{{item.post.name}}</td>
-                            <td><img class="rounded hoverable" src="{{ asset('uploads/fotos/'~item.post.foto)}}"width="130px" height="90px">
-                            <td>{{item.post.precio}}</td>
-                            <td>{{item.quantity}}</td>
-                            <td>{{item.post.precio * item.quantity}}</td>
-                            <td>
-                                <a href="{{ path('cart_remove', {'id': item.post.id}) }}" class="btn btn-danger btn-sm">
-                                    <i class="fas fa-trash"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="3" class="text-right">Total:
-                        </td>
-                        <td>{{ total }}</td>
-                        <td></td>
-            </table>
-                    <a href="{{ path('pagar')}}" type="button" class="btn btn-success">Pagar</a>
-
-            {% else %}
-            <p>¡No has añadido ningun articulo aún!</p>
-        {% endif %}
+                {% if items | length > 0 %}
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Articulo</th>
+                                <th>Imagen</th>
+                                <th>Precio</th>
+                                <th>Cantidad</th>
+                                <th>Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in items %}
+                                <tr>
+                                    <td>{{item.post.name}}</td>
+                                    <td><img class="rounded hoverable" src="{{ asset('uploads/fotos/'~item.post.foto)}}"width="130px" height="90px">
+                                    <td>{{item.post.precio}}</td>
+                                    <td>{{item.quantity}}</td>
+                                    <td>{{item.post.precio * item.quantity}}</td>
+                                    <td>
+                                        <a href="{{ path('cart_remove', {'id': item.post.id}) }}" class="btn btn-danger btn-sm">
+                                            <i class="fas fa-trash"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="3" class="text-right">Total:
+                                </td>
+                                <td>{{ total }}</td>
+                                <td></td>
+                    </table>
+                {% else %}
+                        <p>¡No has añadido ningun articulo aún!</p>
+                {% endif %}
+                {% if app.user %}
+                    <a href="{{ path('pagar') }}" class="btn btn-success"></a>
+                {% else %}
+                    <input type="button" class="btn btn-success" onclick="delayRedirect()" value="Pagar"/>
+                    <hr>
+                    <div id="delayMsgg" class="text-center"></div>
+                {% endif %}
+            </div>
         </div>
-  </div>
-  </div>
+    </div>
 {# onclick="window.location.href='/categoria/{{category.id}}/index'" #}
+<script>
+ function delayRedirect(){
+
+    document.getElementById('delayMsgg').innerHTML = 'Inicia sesion o registrate para finalizar la compra <span id="countDown" style="display:none">5</span>';
+
+    var count = 5;
+    setInterval(function(){
+        count--;
+        document.getElementById('countDown').innerHTML = count;
+        if (count == 0) {
+            window.location = '{{path("dashboard")}}'; 
+        }
+    },1000);
+}
+</script>
 {% endblock %}
