--- a/templates/registro/show.html.twig
+++ b/templates/registro/show.html.twig
@@ -2,6 +2,7 @@
 {% block title %}    {{parent()}} - Cuenta de Usuario{% endblock %}
 
 {% block body %}
+<body class="userShow">
     {{parent()}} 
 <div class="wrapper bg-white">
     <div class="wrap bg-white">
@@ -15,48 +16,48 @@
             <form>
             <br>
             <div class="row">
-                <div class="col-md-4">
+                <div class="statsCol3">
                     <label>ID de Usuario</label>
                         <input placeholder="{{ user.id }}" class=".form-control-plaintext" readonly>
                 </div>
-                <div class="col-md-4">
+                <div class="statsCol3">
                     <label>Nombre de Usuario</label>
                         <input placeholder="{{ user.nombre }}" readonly>
                 </div>
-                <div class="col-md-4">
+                <div class="statsCol3">
                     <label>Apellidos </label>
                         <input placeholder="{{ user.apellidos }}" readonly>
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-md-6">
+                <div class="statsCol2">
                     <label>Fecha de nacimiento</label>
                         <input placeholder="{{ user.fechanacimiento | date}}" readonly>
                 </div>
-                <div class="col-md-6">
+                <div class="statsCol2">
                     <label>Correo electronico</label>
                         <input placeholder="{{ user.email }}" readonly>
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-md-6">
+                <div class="statsCol2">
                     <label>Numero de Telefono</label>
                         <input placeholder="{{ user.numerotelefono }}" readonly>
                 </div>
-                <div class="col-md-6">
+                <div class="statsCol2">
                     <label>Provincia</label>
                         <input placeholder="{{ user.provincia }}" readonly>
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-md-6">
+                <div class="statsCol2">
                     <label>Codigo Postal</label>
                         <input placeholder="{{ user.codigopostal }}" readonly>
                 </div>
-                <div class="col-md-6">
+                <div class="statsCol2">
                     <label>Dirección</label>
                         <input placeholder="{{ user.direccion }}" readonly>
                 </div>
@@ -95,4 +96,5 @@
            </div>            
        </div>
 </footer>
+</body>
 {% endblock %}
