--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -2,6 +2,7 @@
 {% block title %}{{parent()}}{% endblock %}
 {% block body %}
 {{ parent() }}
+cacahuete
     <div class="wrapper bg-white">
         <div class="wrap bg-white">
             <div class="container bg-white">
